[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-learn"
version = "0.1.0"
description = "Minimal working A2A (Agent2Agent) examples: a summarizer agent, a router agent that delegates over A2A, and a client."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.2.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
py-modules = ["summarizer_agent", "router_agent", "client"]
