[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-learn"
version = "0.1.0"
description = "Minimal working Model Context Protocol (MCP) example: a server that exposes tools, a resource, and a prompt, plus a stdio client."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
py-modules = ["server", "client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
