[project]
name = "mcp-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeff Bailey", email = "776901+jeffabailey@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.13.1",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
